--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.2",
+    "@prisma/client": "5.16.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "dotenv": "^16.4.5",
     "next": "14.2.4",
+    "pg": "^8.12.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
